hphp/hack/test/typecheck/variadic_args9.php.exp
File "variadic_args9.php", line 7, characters 7-8:
This object is of type C2 (Typing[4110])
File "variadic_args9.php", line 7, characters 18-19:
It is incompatible with this object of type C1
because some declarations are incompatible.
Read the following to see why:
File "variadic_args9.php", line 8, characters 31-35:
This is an int (variadic argument)
File "variadic_args9.php", line 4, characters 34-38:
It is incompatible with a string (variadic argument)
